overall: minor style changes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -613,7 +613,7 @@ body {
 
   width: 40%;
 
-  top: 50%;
+  top: 50vh;
   left: 50%;
 
   transform: translate(-50%, -50%);
@@ -906,7 +906,7 @@ body {
 }
 
 .home-carousel-img {
-  height: 400px;
+  height: 500px;
 
   border-radius: 10px;
 }
