dashboard: Added off canvas to search health ID

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -332,6 +332,75 @@ body {
     width: 60px;
   }
 }
+
+.dashboard-search-health-id{
+  position: fixed;
+  right: 0;
+  top: 50vh;
+
+  padding: 0;
+
+  transform: translate(0, -50%);
+
+  z-index: 10;
+
+  height: 60px;
+  width: 30px;
+
+  border-top-left-radius: 60px;
+  border-bottom-left-radius: 60px;
+
+  border: rgb(20, 57, 126) solid 1px;
+  border-right: none;
+
+  outline: none;
+
+
+  background-color: rgb(0, 119, 255);
+
+  outline: none !important;
+}
+
+
+ .dashboard-search-health-id:hover{
+  
+  outline: none;
+
+  background-color: rgb(255, 255, 255);
+}
+
+.dashboard-health-id-div{
+  height: 59px;
+  width: 30px;
+
+  border-top-left-radius: 60px;
+  border-bottom-left-radius: 60px;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+
+  align-items: center;
+  
+
+
+}
+
+.dashboard-health-id-div:hover{
+  filter: brightness(0);
+  -webkit-filter: brightness(0);
+}
+
+.dashboard-health-id-icon{
+  height: 23px;
+  width: 23px;
+
+  float: right;
+
+  
+}
+
 /*sub divisions styles--------------------------*/
 .sub-division {
   padding-right: 15px;
