--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,11 +45,11 @@ body {
   opacity: 0;
 }
 
-select:invalid{
+select:invalid {
   color: gray !important;
 }
 
-option{
+option {
   color: #000000 !important;
 }
 
@@ -365,12 +365,16 @@ option{
   opacity: 70%;
 
   outline: none !important;
+
+  transition: all 0.2s ease-in-out;
 }
 
 .dashboard-search-health-id:hover {
   outline: none;
   opacity: 100%;
   background-color: rgba(0, 119, 255, 0.87);
+
+  transition: all 0.1s ease-in-out;
 }
 
 .dashboard-search-health-id-post .dashboard-health-id-icon {
@@ -418,6 +422,22 @@ option{
 .dashboard-offcanvas {
   background-color: rgb(255, 255, 255);
   backdrop-filter: blur(10px);
+
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.dashboard-offcanvas-backdrop {
+  backdrop-filter: blur(3px);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: -3;
+
+  border: none;
+
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 .dashboard-dropdown-arrow {
@@ -439,6 +459,15 @@ option{
   width: 100%;
 }
 
+.dashboard-dropdown-background {
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+
+  position: absolute;
+
+  z-index: -2;
+}
+
 .dashboard-dropdown-btn {
   text-align: left;
   background: transparent;
@@ -452,6 +481,49 @@ option{
 
 .dashboard-dropdown-btn:focus {
   background: transparent;
+}
+
+.dashboard-health-id-search-result {
+  padding-top: 20px;
+}
+
+.dashboard-search-health-id-table {
+  width: 100%;
+
+  box-shadow: 1px 2px 10px rgba(115, 116, 117, 0.616);
+
+  border-radius: 10px;
+}
+
+.dashboard-search-health-id-table th,
+.dashboard-search-health-id-table td {
+  background-color: #006aff8c;
+
+  padding: 10px;
+}
+
+.dashboard-search-health-id-table .dashboard-last-row {
+  border-bottom: rgba(0, 0, 0, 0.534) solid 1px;
+}
+
+.dashboard-search-health-id-table tr:last-child th:first-child {
+  border-bottom-left-radius: 10px;
+}
+
+.dashboard-search-health-id-table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+
+.dashboard-search-health-id-table tr:first-child th:first-child {
+  border-top-left-radius: 10px;
+}
+
+.dashboard-search-health-id-table tr:first-child td:last-child {
+  border-top-right-radius: 10px;
+}
+
+.dashboard-search-health-id-table tr:last-child {
+  border: none;
 }
 
 /*sub divisions styles--------------------------*/
