--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -571,10 +571,12 @@ option {
   padding-bottom: 4%;
 }
 .data-table {
-  border-top: grey 1px solid;
+  border-top: rgba(1, 43, 107, 0.350) 1px solid;
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-bottom: grey 1px solid;
+  border-bottom: rgba(1, 43, 107, 0.350) 1px solid;
   font-size: 14px;
+
+  background-color: rgba(131, 209, 240, 0.671);
 }
 .data-edit {
   font-size: 20px;
@@ -582,6 +584,11 @@ option {
 .data-delete {
   padding-top: 2px;
 }
+
+.data-update-cus-btn{
+  background-color: rgb(102, 212, 255);
+}
+
 .division-maximized {
   width: 95%;
 
