--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -576,7 +576,7 @@ option {
   border-bottom: rgba(1, 43, 107, 0.350) 1px solid;
   font-size: 14px;
 
-  background-color: rgba(131, 209, 240, 0.671);
+  background-color: rgba(246, 247, 248, 0.801);
 }
 .data-edit {
   font-size: 20px;
@@ -586,7 +586,19 @@ option {
 }
 
 .data-update-cus-btn{
-  background-color: rgb(102, 212, 255);
+  background-color: rgb(255, 255, 255);
+  border: black 1px solid;
+
+  transition: all 0.2s ease-in-out;
+}
+
+.data-update-cus-btn:hover{
+
+  background-color: rgb(190, 189, 189);
+  border: rgb(255, 255, 255) 1px solid;
+
+  transition: all 0.2s ease-in-out;
+
 }
 
 .division-maximized {
